=====================================
Date	  : Version: Description
=====================================

2024-06-10: v1.2.2 : Tested on PrestaShop 8.1.6.
                     Code quality and improvements.

2023-08-15: v1.2.1 : Test PrestaShop 8.1.0.
                     Update for PHP 8.0.
                     Bug fixes and improvements.