@@ -2,6 +2,9 @@
 Date	  : Version: Description
 =====================================
 
+2024-08-28: v1.2.3 : Tested on PrestaShop 8.1.7.
+                     Fix logo not appearing when selecting a payment method.
+
 2024-06-10: v1.2.2 : Tested on PrestaShop 8.1.6.
                      Code quality and improvements.
 
